--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "recharts": "^3.0.2",
     "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.11"
   },
