--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
